--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather Dashboard</title>
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
   <h1>Weather Dashboard</h1>
@@ -24,6 +24,6 @@
   <ul id="previous-searches"></ul>
   <button id="clear-button">Clear Recent Searches</button>
 
-  <script src="assets/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
