--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 <body>
   <h1>Weather Dashboard</h1>
 
-  <div class="forecast-wrapper">
-    <div id="forecast-container"></div>
-  </div>
-
   <div id="search-container">
     <input type="text" id="city-input" placeholder="Search">
     <button id="search-button">Search</button>
   </div>
 
-  
+  <div class="forecast-banner" id="forecast-banner">
+    <h2 id="banner-city"></h2>
+    <p id="banner-date"></p>
+    <p id="banner-conditions"></p>
+    <p id="banner-high-temp"></p>
+    <p id="banner-low-temp"></p>
+  </div>
+
+  <div class="forecast-wrapper" id="forecast-wrapper"></div>
 
   <h2>Previous Searches</h2>
   <ul id="previous-searches"></ul>
